# starting-ragchatbot-codebase

./: CLAUDE.md  CLICKABLE_SOURCES_IMPLEMENTATION.md  frontend-changes.md  pyproject.toml  query_flow_diagram.md  test_clickable_sources.py
backend/: ai_generator.py  app.py  search_tools.py
backend/tests/: conftest.py  test_ai_generator.py  test_api_endpoints.py  test_course_search_tool.py  test_rag_system_integration.py  test_sequential_integration.py
backend/tests/test_data/: test_course.txt
frontend/: index.html  script.js  style.css
scripts/: format.sh  lint.sh
